@@ -75,6 +75,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5346: Preserve permissions of mbox, MMDF and Babyl mailbox
+  files on flush().
+
 - Issue #15219: Fix a reference leak when hashlib.new() is called with
   invalid parameters.
 
